--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,15 +4,14 @@
     </head>
     <body>
       <div>
-        <h2><a href="">My first post</a></h2>
-        <p>published: 2017/12/18, 12:14</p>
-        <p>hihihhihiihihihihi.</p>
+        <h1><a href="/">Django Girls Blog</a></h1>
       </div>
-
+{% for post in posts %}
       <div>
-          <h2><a href="">My second post</a></h2>
-          <p>published: 2017/12/18, 12:14</p>
-          <p>hellohellohellohello</p>
+        <p>published: {{ post.published_date }}</p>
+        <h1><a href="">{{ post.title }}</a></h1>
+        <p>{{ post.text|linebreaksbr }}</p>
       </div>
+{% endfor %}
     </body>
 </html>
